<resources>
    <string name="app_name">Expenses tracker</string>

    <string name="general_item_expenses_title">Расходы</string>
    <string name="general_item_incomes_title">Доходы</string>
    <string name="general_item_balance_title">Баланс</string>
    <string name="general_item_expenses_button_title">Все расходы</string>
    <string name="general_item_incomes_button_title">Все доходы</string>

    <string name="today_title">Сегодня</string>
    <string name="week_title">Неделя</string>
    <string name="month_title">Месяц</string>

    <string name="general_item_balance_amount_title">Всё время</string>

    <string name="add_expense_title">Расход</string>
    <string name="add_expense_date_title">Дата</string>
    <string name="add_expense_time_title">Время</string>
    <string name="add_expense_category_title">Категория</string>
    <string name="add_expense_amount_title">Сумма</string>
    <string name="add_expense_currency_title">Валюта</string>
    <string name="add_expense_comment_title">Комментарий</string>

    <string name="category_title">Категории</string>
    <string name="category_new_category_hint">Новая категория</string>

    <string name="category_menu_rename">Переименовать</string>
    <string name="category_menu_delete">Удалить</string>

    <string name="category_transaction_menu_delete">Удалить</string>
    <string name="category_transaction_menu_change">Редактировать</string>

    <string name="transactions_period_day">День</string>
    <string name="transactions_period_week">Неделя</string>
    <string name="transactions_period_month">Месяц</string>
    <string name="transactions_period_year">Год</string>
    <string name="transactions_period_period">Период</string>
    <string name="transactions_period_all_time">Все время</string>
    <string name="transactions_period_hyphen">—</string>

    <string name="transactions_total_amount_title">Всего:</string>

    <string name="pie_chart_title">Диаграмма</string>
    <string name="pie_chart_finance_category_expenses">Расходы</string>
    <string name="pie_chart_finance_category_incomes">Доходы</string>
</resources>